--- a/views/projects.html
+++ b/views/projects.html
@@ -622,6 +622,62 @@
 				</div>
 			</div>			
 		</div><!-- Row Closed -->
+	
+		<div class="row project_row"><!-- Row Started -->
+			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
+				<div class="project f1_container">
+					<span class="icon" title="Click me for more Info.">
+						<span class="glyphicon glyphicon-info-sign"></span>
+					</span>
+					<a class="f1_card" href="http://wasimakram-mulla.github.io/livechat/" target="_blank">
+						<div class="front face">
+							<img src="img/projects/livechat.jpg" class="featurette-image img-responsive" alt="500x300">
+						</div>
+						<div class="back face">
+							<div class="overlay">
+								<div class="text-data">
+									<h3>Live Chat (Online chat)</h3> 
+									<h4>This live chat is an open source application to create and demo a simple chat application. <br/>
+										Any user is able to chat as well as code and also if wanted he can clone the code too.
+										<br/>
+										Frameworks used: HTML5, CSS3, Bootstrap, AngularJS 1, Firebase, etc.
+									</h4>
+								</div>
+							</div>
+						</div>
+					</a>
+				</div>
+			</div>	
+			
+			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
+				<div class="project f1_container">
+					<span class="icon" title="Click me for more Info.">
+						<span class="glyphicon glyphicon-info-sign"></span>
+					</span>
+					<a class="f1_card" href="http://wasimakram-mulla.github.io/hangman/" target="_blank">
+						<div class="front face">
+							<img src="img/projects/hangman.jpg" class="featurette-image img-responsive" alt="500x300">
+						</div>
+						<div class="back face">
+							<div class="overlay">
+								<div class="text-data">
+									<h3>Hangman</h3> 
+									<h4>
+									A very easy to play game created by me. Its quite simple to play just follow the rules below.<br/>
+									<strong>Rules:</strong><br/>
+									Let the opponent add a movie name of his choice.<br/>
+									And then start the game by clicking "Start Game" button.<br/>
+									Later you have to guess the characters of the movie what it would be by clicking the Alphabets.<br/>
+									For each wrong alphabet selected a character from the word "Hollywood" will be highlighted which is your life-points. Which makes a total of 9 Life-points.<br/>
+									Well good luck and enjoy<br/>
+									.</h4>
+								</div>
+							</div>
+						</div>
+					</a>
+				</div>
+			</div>			
+		</div><!-- Row Closed -->
 		
 	</div>
 </div>
