--- a/views/projects.html
+++ b/views/projects.html
@@ -678,6 +678,33 @@
 				</div>
 			</div>			
 		</div><!-- Row Closed -->
+	
+		<div class="row project_row"><!-- Row Started -->
+			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
+				<div class="project f1_container">
+					<span class="icon" title="Click me for more Info.">
+						<span class="glyphicon glyphicon-info-sign"></span>
+					</span>
+					<a class="f1_card" href="http://wasimakram-mulla.github.io/quiz/#/quiz" target="_blank">
+						<div class="front face">
+							<img src="img/projects/angular_quiz.jpg" class="featurette-image img-responsive" alt="500x300">
+						</div>
+						<div class="back face">
+							<div class="overlay">
+								<div class="text-data">
+									<h3>Angular Quiz</h3> 
+									<h4>Angular quiz is an interesting quiz where you can choose the number of questions you like and also each time you start the quiz you will get a random question.<br/><br/>
+									The biggest benefit of this quiz is, all of your questions and answers are shown with the score in the end and in which question you lag the result with clearify it.
+										<br/>
+										Frameworks used: HTML5, CSS3, Bootstrap, AngularJS 1, etc.
+									</h4>
+								</div>
+							</div>
+						</div>
+					</a>
+				</div>
+			</div>			
+		</div><!-- Row Closed -->
 		
 	</div>
 </div>
