--- a/views/profile.html
+++ b/views/profile.html
@@ -11,11 +11,11 @@
 		<div class="col-md-4 col-xs-4 col-lg-4 center">
 			<img width="250" height="250" alt="Pic" src="img/myPic.jpg" class="img-circle img-responsive">
 		</div>
-		<div class="col-md-4 col-xs-4 col-lg-4">
+		<div class="col-md-4 col-xs-4 col-lg-4" ng-controller="HomeController">
 			<h3 class="text-info">Details</h3>
 			<strong>Name:</strong><br/>Wasimakram. H. Mulla<br/><br/>	
 			<!-- <strong>Age:</strong><br/>{{621196200000 | date}}<br/><br/>	 -->
-			<strong>Age:</strong><br/>25 Years<br/><br/>	
+			<strong>Age:</strong><br/>{{age}} Years<br/><br/>	
 			<strong>Location:</strong><br/>Pune, Maharashtra, India.<br/><br/>	
 		</div>
 	</div>
