--- a/views/profile.html
+++ b/views/profile.html
@@ -15,7 +15,7 @@
 			<h3 class="text-info">Details</h3>
 			<strong>Name:</strong><br/>Wasimakram. H. Mulla<br/><br/>	
 			<!-- <strong>Age:</strong><br/>{{621196200000 | date}}<br/><br/>	 -->
-			<strong>Age:</strong><br/>{{age}} Years<br/><br/>	
+			<strong>Age:</strong><br/>{{age}}<br/><br/>	
 			<strong>Location:</strong><br/>Pune, Maharashtra, India.<br/><br/>	
 		</div>
 	</div>
