--- a/views/projects.html
+++ b/views/projects.html
@@ -5,7 +5,7 @@
 	<div id="totProjects">Total Projects: <strong><span class="text-info"></span></strong></div><br/>
 	</div>
 	<div class="col-md-12 col-xs-12 col-lg-12">
-	
+
 		<div class="row project_row"><!-- Row Started -->
 			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
 				<div class="project f1_container">
@@ -27,7 +27,7 @@
 					</a>
 				</div>
 			</div>
-			
+
 			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
 				<div class="project f1_container">
 					<span class="icon" title="Click me for more Info.">
@@ -49,7 +49,7 @@
 				</div>
 			</div>
 		</div><!-- Row Closed -->
-	
+
 		<div class="row project_row"><!-- Row Started -->
 			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
 				<div class="project f1_container">
@@ -71,7 +71,7 @@
 					</a>
 				</div>
 			</div>
-			
+
 			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
 				<div class="project f1_container">
 					<span class="icon" title="Click me for more Info.">
@@ -93,8 +93,8 @@
 				</div>
 			</div>
 		</div><!-- Row Closed -->
-		
-	
+
+
 		<div class="row project_row"><!-- Row Started -->
 			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
 				<div class="project f1_container">
@@ -108,15 +108,15 @@
 						<div class="back face">
 							<div class="overlay">
 								<div class="text-data">
-									<h3>Attendance Management System</h3> 
+									<h3>Attendance Management System</h3>
 									<h4>This demo was created for Attendance of employees in a Company. Demo is generated using BARCODE System.</h4>
 								</div>
 							</div>
-						</div>					
+						</div>
 					</a>
 				</div>
 			</div>
-			
+
 			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
 				<div class="project f1_container">
 					<span class="icon" title="Click me for more Info.">
@@ -137,8 +137,8 @@
 					</a>
 				</div>
 			</div>
-		</div><!-- Row Closed -->		
-	
+		</div><!-- Row Closed -->
+
 		<div class="row project_row"><!-- Row Started -->
 			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
 				<div class="project f1_container">
@@ -152,7 +152,7 @@
 						<div class="back face">
 							<div class="overlay">
 								<div class="text-data">
-									<h3>Photo Gallery</h3> 
+									<h3>Photo Gallery</h3>
 									<h4>This is a very simple and responsive photo Gallery, with a responsive slider overhead.</h4>
 								</div>
 							</div>
@@ -160,7 +160,7 @@
 					</a>
 				</div>
 			</div>
-			
+
 			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
 				<div class="project f1_container">
 					<span class="icon" title="Click me for more Info.">
@@ -181,8 +181,8 @@
 					</a>
 				</div>
 			</div>
-		</div><!-- Row Closed -->	
-	
+		</div><!-- Row Closed -->
+
 		<div class="row project_row"><!-- Row Started -->
 			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
 				<div class="project f1_container">
@@ -196,15 +196,15 @@
 						<div class="back face">
 							<div class="overlay">
 								<div class="text-data">
-									<h3>Hall Decoration</h3> 
+									<h3>Hall Decoration</h3>
 									<h4>In this demo you can add objects to you hall and change the look n feel and see how it looks.</h4>
 								</div>
 							</div>
-						</div>					
+						</div>
 					</a>
 				</div>
 			</div>
-			
+
 			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
 				<div class="project f1_container">
 					<span class="icon" title="Click me for more Info.">
@@ -225,8 +225,8 @@
 					</a>
 				</div>
 			</div>
-		</div><!-- Row Closed -->	
-	
+		</div><!-- Row Closed -->
+
 		<div class="row project_row"><!-- Row Started -->
 			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
 				<div class="project f1_container">
@@ -240,15 +240,15 @@
 						<div class="back face">
 							<div class="overlay">
 								<div class="text-data">
-									<h3>Questionnaire</h3> 
+									<h3>Questionnaire</h3>
 									<h4>This demo was created to explain details of AngularJS</h4>
 								</div>
 							</div>
-						</div>						
+						</div>
 					</a>
 				</div>
 			</div>
-			
+
 			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
 				<div class="project f1_container">
 					<span class="icon" title="Click me for more Info.">
@@ -265,12 +265,12 @@
 									<h4>In this site you will observe all the latest and important points of HTML5 and also some examples created by ME.Please go ahead and read.</h4>
 								</div>
 							</div>
-						</div>	
+						</div>
 					</a>
 				</div>
 			</div>
 		</div><!-- Row Closed -->
-	
+
 		<div class="row project_row"><!-- Row Started -->
 			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
 				<div class="project f1_container">
@@ -292,7 +292,7 @@
 					</a>
 				</div>
 			</div>
-			
+
 			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
 				<div class="project f1_container">
 					<span class="icon" title="Click me for more Info.">
@@ -314,7 +314,7 @@
 				</div>
 			</div>
 		</div><!-- Row Closed -->
-	
+
 		<div class="row project_row"><!-- Row Started -->
 			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
 				<div class="project f1_container">
@@ -328,7 +328,7 @@
 						<div class="back face">
 							<div class="overlay">
 								<div class="text-data">
-							<h3>Editable Content On Browser</h3> 
+							<h3>Editable Content On Browser</h3>
 							<h4>This demo was created to show how we can edit contents on browser without using any Text-box or Text-area.</h4>
 								</div>
 							</div>
@@ -336,7 +336,7 @@
 					</a>
 				</div>
 			</div>
-			
+
 			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
 				<div class="project f1_container">
 					<span class="icon" title="Click me for more Info.">
@@ -358,7 +358,7 @@
 				</div>
 			</div>
 		</div><!-- Row Closed -->
-	
+
 		<div class="row project_row"><!-- Row Started -->
 			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
 				<div class="project f1_container">
@@ -372,7 +372,7 @@
 						<div class="back face">
 							<div class="overlay">
 								<div class="text-data">
-									<h3>Parallax Demo</h3> 
+									<h3>Parallax Demo</h3>
 									<h4>A Self made dummy parallax demo.</h4>
 								</div>
 							</div>
@@ -380,7 +380,7 @@
 					</a>
 				</div>
 			</div>
-			
+
 			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
 				<div class="project f1_container">
 					<span class="icon" title="Click me for more Info.">
@@ -402,7 +402,7 @@
 				</div>
 			</div>
 		</div><!-- Row Closed -->
-	
+
 		<div class="row project_row"><!-- Row Started -->
 			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
 				<div class="project f1_container">
@@ -416,7 +416,7 @@
 						<div class="back face">
 							<div class="overlay">
 								<div class="text-data">
-									<h3>Tic Tac Toe</h3> 
+									<h3>Tic Tac Toe</h3>
 									<h4>This is a Game of Tic Tac Toe, Play and Enjoy.</h4>
 								</div>
 							</div>
@@ -424,7 +424,7 @@
 					</a>
 				</div>
 			</div>
-			
+
 			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
 				<div class="project f1_container">
 					<span class="icon" title="Click me for more Info.">
@@ -446,7 +446,7 @@
 				</div>
 			</div>
 		</div><!-- Row Closed -->
-	
+
 		<div class="row project_row"><!-- Row Started -->
 			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
 				<div class="project f1_container">
@@ -460,7 +460,7 @@
 						<div class="back face">
 							<div class="overlay">
 								<div class="text-data">
-									<h3>Analog clock</h3> 
+									<h3>Analog clock</h3>
 									<h4>This is a small demo to show your current PC time in Analog style.</h4>
 								</div>
 							</div>
@@ -468,7 +468,7 @@
 					</a>
 				</div>
 			</div>
-			
+
 			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
 				<div class="project f1_container">
 					<span class="icon" title="Click me for more Info.">
@@ -490,7 +490,7 @@
 				</div>
 			</div>
 		</div><!-- Row Closed -->
-	
+
 		<div class="row project_row"><!-- Row Started -->
 			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
 				<div class="project f1_container">
@@ -504,7 +504,7 @@
 						<div class="back face">
 							<div class="overlay">
 								<div class="text-data">
-									<h3>3D Skybox - Cubic Skybox and Reflection</h3> 
+									<h3>3D Skybox - Cubic Skybox and Reflection</h3>
 									<h4>This demo uses WebGL which gives your browser a 3D Effect. This demo show a place which you can see in 360 Degree.</h4>
 								</div>
 							</div>
@@ -512,7 +512,7 @@
 					</a>
 				</div>
 			</div>
-			
+
 			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
 				<div class="project f1_container">
 					<span class="icon" title="Click me for more Info.">
@@ -534,7 +534,7 @@
 				</div>
 			</div>
 		</div><!-- Row Closed -->
-	
+
 		<div class="row project_row"><!-- Row Started -->
 			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
 				<div class="project f1_container">
@@ -548,7 +548,7 @@
 						<div class="back face">
 							<div class="overlay">
 								<div class="text-data">
-									<h3>WebGL 360 Rotation</h3> 
+									<h3>WebGL 360 Rotation</h3>
 									<h4>This is too a demo on WebGL, in which you can rotate the box anyhow in anyway.</h4>
 								</div>
 							</div>
@@ -556,7 +556,7 @@
 					</a>
 				</div>
 			</div>
-			
+
 			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
 				<div class="project f1_container">
 					<span class="icon" title="Click me for more Info.">
@@ -578,7 +578,7 @@
 				</div>
 			</div>
 		</div><!-- Row Closed -->
-	
+
 		<div class="row project_row"><!-- Row Started -->
 			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
 				<div class="project f1_container">
@@ -592,15 +592,15 @@
 						<div class="back face">
 							<div class="overlay">
 								<div class="text-data">
-									<h3>My Kart (Shopping Site - Demo)</h3> 
+									<h3>My Kart (Shopping Site - Demo)</h3>
 									<h4>This is a Small Shopping Site demo, Created in 1-Day. This is quite simple and yet powerful. <br/> Technologies Used: HTML5, CSS3, Bootstrap and AngularJS.</h4>
 								</div>
 							</div>
 						</div>
 					</a>
 				</div>
-			</div>	
-			
+			</div>
+
 			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
 				<div class="project f1_container">
 					<span class="icon" title="Click me for more Info.">
@@ -613,16 +613,16 @@
 						<div class="back face">
 							<div class="overlay">
 								<div class="text-data">
-									<h3>Chatbox</h3> 
+									<h3>Chatbox</h3>
 									<h4>This is a very powerful chatbox application where a user needs no registration and anyone can create his own group and can chat.</h4>
 								</div>
 							</div>
 						</div>
 					</a>
 				</div>
-			</div>			
+			</div>
 		</div><!-- Row Closed -->
-	
+
 		<div class="row project_row"><!-- Row Started -->
 			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
 				<div class="project f1_container">
@@ -636,7 +636,7 @@
 						<div class="back face">
 							<div class="overlay">
 								<div class="text-data">
-									<h3>Live Chat (Online chat)</h3> 
+									<h3>Live Chat (Online chat)</h3>
 									<h4>This live chat is an open source application to create and demo a simple chat application. <br/>
 										Any user is able to chat as well as code and also if wanted he can clone the code too.
 										<br/>
@@ -647,8 +647,8 @@
 						</div>
 					</a>
 				</div>
-			</div>	
-			
+			</div>
+
 			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
 				<div class="project f1_container">
 					<span class="icon" title="Click me for more Info.">
@@ -661,7 +661,7 @@
 						<div class="back face">
 							<div class="overlay">
 								<div class="text-data">
-									<h3>Hangman</h3> 
+									<h3>Hangman</h3>
 									<h4>
 									A very easy to play game created by me. Its quite simple to play just follow the rules below.<br/>
 									<strong>Rules:</strong><br/>
@@ -676,9 +676,9 @@
 						</div>
 					</a>
 				</div>
-			</div>			
+			</div>
 		</div><!-- Row Closed -->
-	
+
 		<div class="row project_row"><!-- Row Started -->
 			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
 				<div class="project f1_container">
@@ -692,7 +692,7 @@
 						<div class="back face">
 							<div class="overlay">
 								<div class="text-data">
-									<h3>Angular Quiz</h3> 
+									<h3>Angular Quiz</h3>
 									<h4>Angular quiz is an interesting quiz where you can choose the number of questions you like and also each time you start the quiz you will get a random question.<br/><br/>
 									The biggest benefit of this quiz is, all of your questions and answers are shown with the score in the end and in which question you lag the result with clearify it.
 										<br/>
@@ -703,9 +703,33 @@
 						</div>
 					</a>
 				</div>
-			</div>			
+			</div>
+			
+			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
+				<div class="project f1_container">
+					<span class="icon" title="Click me for more Info.">
+						<span class="glyphicon glyphicon-info-sign"></span>
+					</span>
+					<a class="f1_card" href="http://wasimakram-mulla.github.io/expedition/" target="_blank">
+						<div class="front face">
+							<img src="img/projects/expedition.jpg" class="featurette-image img-responsive" alt="500x300">
+						</div>
+						<div class="back face">
+							<div class="overlay">
+								<div class="text-data">
+									<h3>Expedition Quest</h3>
+									<h4>Expedition Quest, is a fun game with a lot of things to do. There are various set of rules and gameplays.<br/><br/>		You'll love the two different layouts in which you can play. You will play it in 1024 * 768	resolution at best.						
+										<br/>
+										Frameworks used: HTML5, CSS3, Bootstrap, AngularJS 1, jQuery and JavaScript, etc.
+									</h4>
+								</div>
+							</div>
+						</div>
+					</a>
+				</div>
+			</div>
 		</div><!-- Row Closed -->
-		
+
 	</div>
 </div>
 
