--- a/views/projects.html
+++ b/views/projects.html
@@ -730,6 +730,37 @@
 			</div>
 		</div><!-- Row Closed -->
 
+		<div class="row project_row"><!-- Row Started -->
+			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
+				<div class="project f1_container">
+					<span class="icon" title="Click me for more Info.">
+						<span class="glyphicon glyphicon-info-sign"></span>
+					</span>
+					<a class="f1_card" href="http://wasimakram-mulla.github.io/projects/blog/index.html" target="_blank">
+						<div class="front face">
+							<img src="img/projects/blog.jpg" class="featurette-image img-responsive" alt="500x300">
+						</div>
+						<div class="back face">
+							<div class="overlay">
+								<div class="text-data">
+									<h3>Blog post</h3>
+									<h4>I have created a static data blog, this blog stores the data only in the temporary session, once the session is closed the data is reset back to the original data.<br/><br/>
+									I have created this blog trying to use as standard angular code as possible, you can even do so just by checking out the code and use it.
+										<br/>
+										Frameworks used: HTML5, CSS3, Bootstrap, AngularJS 1, etc.
+									</h4>
+								</div>
+							</div>
+						</div>
+					</a>
+				</div>
+			</div>
+			
+			<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
+				
+			</div>
+		</div><!-- Row Closed -->
+
 	</div>
 </div>
 
