Moved hangman and expedition to projects directory and modified projects sequences

--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,8 @@ body {
 }
 .alert.popupContent {
     height: 50%;
-    min-height: 600px;
+    /* min-height: 600px; */
+    min-height: auto;
     overflow: auto;
 }
 .showPopUp {
