moved quiz and livechat projects to projects folder, also updated links with local links

--- a/views/projects.html
+++ b/views/projects.html
@@ -10,7 +10,7 @@
 			<span class="icon" title="Click me for more Info.">
 				<span class="glyphicon glyphicon-info-sign"></span>
 			</span>
-			<a class="f1_card" href="http://wasimakram-mulla.github.io/projects/blog/index.html" target="_blank">
+			<a class="f1_card" href="projects/blog/index.html" target="_blank">
 				<div class="front face">
 					<img src="img/projects/blog.jpg" class="featurette-image img-responsive" alt="500x300">
 				</div>
@@ -35,7 +35,7 @@
 			<span class="icon" title="Click me for more Info.">
 				<span class="glyphicon glyphicon-info-sign"></span>
 			</span>
-			<a class="f1_card" href="http://wasimakram-mulla.github.io/projects/expedition/" target="_blank">
+			<a class="f1_card" href="projects/expedition/" target="_blank">
 				<div class="front face">
 					<img src="img/projects/expedition.jpg" class="featurette-image img-responsive" alt="500x300">
 				</div>
@@ -80,7 +80,7 @@
 			<span class="icon" title="Click me for more Info.">
 				<span class="glyphicon glyphicon-info-sign"></span>
 			</span>
-			<a class="f1_card" href="http://wasimakram-mulla.github.io/projects/hangman/" target="_blank">
+			<a class="f1_card" href="projects/hangman/" target="_blank">
 				<div class="front face">
 					<img src="img/projects/hangman.jpg" class="featurette-image img-responsive" alt="500x300">
 				</div>
@@ -109,7 +109,7 @@
 			<span class="icon" title="Click me for more Info.">
 				<span class="glyphicon glyphicon-info-sign"></span>
 			</span>
-			<a class="f1_card" href="http://wasimakram-mulla.github.io/livechat/" target="_blank">
+			<a class="f1_card" href="projects/livechat/" target="_blank">
 				<div class="front face">
 					<img src="img/projects/livechat.jpg" class="featurette-image img-responsive" alt="500x300">
 				</div>
@@ -134,7 +134,7 @@
 			<span class="icon" title="Click me for more Info.">
 				<span class="glyphicon glyphicon-info-sign"></span>
 			</span>
-			<a class="f1_card" href="http://wasimakram-mulla.github.io/quiz/#/quiz" target="_blank">
+			<a class="f1_card" href="projects/quiz/#/quiz" target="_blank">
 				<div class="front face">
 					<img src="img/projects/angular_quiz.jpg" class="featurette-image img-responsive" alt="500x300">
 				</div>
