--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ body {
 	padding:10px;
 	color:#fff;
 	height: 230px;
-	overflow:hidden;
+	overflow-y: scroll;
 }
 
 .project .icon{
@@ -182,6 +182,10 @@ body {
 
 .project-header, .project-info{
 	display:none;
+}
+
+.languagesUsed{
+	font-size:20px;
 }
 
 @media (max-width: 500px) {
