--- a/views/experience.html
+++ b/views/experience.html
@@ -2,8 +2,8 @@
 	<div class="col-md-12 col-xs-02 col-lg-12">
 		 <h3 class="text-danger">EXPERIENCE</h3><em>"Success is a lousy teacher. It seduces smart people into thinking they can't lose. -- Bill Gates."</em>
 		 <hr class="hr" />
-	</div>	
-	
+	</div>
+
 	<div class="col-md-12 col-xs-02 col-lg-12 experience">
 		<h3 class="text-info">Education</h3>
 		<div class="row">
@@ -11,30 +11,39 @@
 			<div class="col-md-1 col-xs-0 col-lg-1"></div>
 			<div class="col-md-8 col-xs-8 col-lg-8"><strong>Master of Computer Application</strong><p>The education was mainly based on programming and programming techniques, but I also learned about SQL, PHP, MVC, UML and more. In my curricular I learned about the importance of OOPs-, UI- and Important of performance in UI. </p></div>
 		</div><br/><br/>
-		
-		<div class="row">		
+
+		<div class="row">
 			<div class="col-md-3 col-xs-4 col-lg-3"><strong>Ajara Mahavidyalaya Ajara, Shivaji University.</strong><br/>Apr 2005 - Apr 2010</div>
 			<div class="col-md-1 col-xs-0 col-lg-1"></div>
 			<div class="col-md-8 col-xs-8 col-lg-8"><strong>H.S.C and Bachelor of Computer Science (Specialization: Computer Science)</strong><p>The education was mainly based on programming, Mathematics, Skill Development and Operating Systems, but I also learned about Languages, Management, and more. In my curricular I learned about the importance of Languages-, web- and user experience and design. </p></div>
 		</div><br/><br/>
-		
-		<div class="row">		
+
+		<div class="row">
 			<div class="col-md-3 col-xs-4 col-lg-3"><strong>Rosary English High School.</strong><br/>Apr 1992 - Apr 2005</div>
 			<div class="col-md-1 col-xs-0 col-lg-1"></div>
 			<div class="col-md-8 col-xs-8 col-lg-8"><strong>Highschool</strong><p>I graduated highschool, where I enjoyed doing science, math, biology and arts. I realized in my third year of school that I wanted to do something with websites, and so I started making small Web/JavaScript applications.  </p></div>
 		</div>
 		<hr class="hr" />
-		
+
 		<h3 class="text-info">Careers</h3>
 		<div class="row">
-			<div class="col-md-3 col-xs-4 col-lg-3"><strong>Calsoft Pvt. Ltd.</strong><br/>Sept 2014 - current</div>
+			<div class="col-md-3 col-xs-4 col-lg-3"><strong>Cognizant Technology Solutions.</strong><br/>Sept 2015 - Current</div>
 			<div class="col-md-1 col-xs-0 col-lg-1"></div>
-			<div class="col-md-8 col-xs-8 col-lg-8"><strong>Full-time - Senior Software Engineer</strong><p>I started working for Calsoft from September, 2014.A full Network and Storage domain company.Calsoft conducted various training sessions for employees, which benefited me in learning AngularJS framework, a bit of Backbone Framework. In one major project, I developed an own framework for a Client where we needed to show all the details of client's Linux server graphically. All the up-times, downtimes and variuos details were shared from back-end (Python), where I called the services(REST API's) and the data was being provided in JSON format. We modified the data and drew various Graphs like, PIE chart, Line Chart and Bar Chart using NVD3 Library.
+			<div class="col-md-8 col-xs-8 col-lg-8"><strong>Full-time - Project Associate</strong><p>Started working for Cognizant from September, 2015.A fortune 500 company. Cognizant is well known for conducting various training sessions for employees, which benefited me in learning AngularJS 1,  Angular 2 and also ReactJS. I worked with Cognizants major clients, working on various custom frameworks developed with client support. Used various graphical libraries like high chart, etc.
+			<br/>
+			<span class="glyphicon glyphicon-map-marker text-info"></span> <span class="text-info">Pune</span>  | <span class="glyphicon glyphicon-link text-info"></span><span class="text-info"><a href="https://www.cognizant.com/" target="_blank"> https://www.cognizant.com</a></span>
+			</p></div>
+		</div><br/><br/>
+
+		<div class="row">
+			<div class="col-md-3 col-xs-4 col-lg-3"><strong>Calsoft Pvt. Ltd.</strong><br/>Sept 2014 - Sept 2015</div>
+			<div class="col-md-1 col-xs-0 col-lg-1"></div>
+			<div class="col-md-8 col-xs-8 col-lg-8"><strong>Full-time - Senior Software Engineer</strong><p>I started working for Calsoft from September, 2014.A full Network and Storage domain company. Calsoft conducted various training sessions for employees, which benefited me in learning AngularJS framework, a bit of Backbone Framework. In one major project, I developed an own framework for a Client where we needed to show all the details of client's Linux server graphically. All the up-times, downtimes and variuos details were shared from back-end (Python), where I called the services(REST API's) and the data was being provided in JSON format. We modified the data and drew various Graphs like, PIE chart, Line Chart and Bar Chart using NVD3 Library.
 			<br/>
 			<span class="glyphicon glyphicon-map-marker text-info"></span> <span class="text-info">Pune</span>  | <span class="glyphicon glyphicon-link text-info"></span><span class="text-info"><a href="http://calsoftinc.com" target="_blank"> http://calsoftinc.com</a></span>
 			</p></div>
 		</div><br/><br/>
-		
+
 		<div class="row">
 			<div class="col-md-3 col-xs-4 col-lg-3"><strong>Aptara New Media Pvt. Ltd.</strong><br/>Sept 2012 - Sept 2014</div>
 			<div class="col-md-1 col-xs-0 col-lg-1"></div>
