Link to bridge game created

--- a/views/projects.html
+++ b/views/projects.html
@@ -10,6 +10,38 @@
 			<span class="icon" title="Click me for more Info.">
 				<span class="glyphicon glyphicon-info-sign"></span>
 			</span>
+			<a class="f1_card" href="projects/bridge/index.html" target="_blank">
+				<div class="front face">
+					<img src="img/projects/bridge.jpg" class="featurette-image img-responsive" alt="500x300">
+				</div>
+				<div class="back face">
+					<div class="overlay">
+						<div class="text-data">
+							<h3>Bridge game</h3>
+							<h4>
+								<div class="languagesUsed"><span>Languages Used:</span>
+									<label class="label label-success">HTML5</label>
+									<label class="label label-info">CSS3</label>
+									<label class="label label-info">BootStrap</label>
+									<label class="label label-warning">jQuery</label>
+									<label class="label label-warning">Angular 1</label>
+								</div><br/>
+							A game made from solitaire cards. Fun and interactive to play, and is similar to UNO cards.
+								<br/>
+								Frameworks used: HTML5, CSS3, BootStrap, AngularJS 1, etc.
+							</h4>
+						</div>
+					</div>
+				</div>
+			</a>
+		</div>
+	</div> <!-- Angular Blog Project Finish -->
+	
+	<div class="col-md-6 col-xs-12 col-lg-6 flip-container">
+		<div class="project f1_container">
+			<span class="icon" title="Click me for more Info.">
+				<span class="glyphicon glyphicon-info-sign"></span>
+			</span>
 			<a class="f1_card" href="projects/blog/index.html" target="_blank">
 				<div class="front face">
 					<img src="img/projects/blog.jpg" class="featurette-image img-responsive" alt="500x300">
