--- a/projects/myBlog/template/Login/login.html
+++ b/projects/myBlog/template/Login/login.html
@@ -1,15 +1,14 @@
 <div class="container sign-in">
-  <form class="form-signin" ng-submit="loginctrl.checkLogin();">
-	<h2 class="form-signin-heading">Login</h2>
-	<label for="inputEmail" class="sr-only">Email address</label>
-	<input type="email" ng-model="loginctrl.email" class="form-control" placeholder="Email address" required autofocus>
-	<label for="inputPassword" class="sr-only">Password</label>
-	<input type="password" ng-model="loginctrl.passwd" class="form-control" placeholder="Password" required>
-	<div class="checkbox">
-	  <label>
-		<br/>
-	  </label>
-	</div>
-	<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-  </form>
+
+<!-- Splash screen -->
+<section id="page-splash">
+    <h2>Welcome to My Blog</h2>
+    <div class="align-center">
+      <button id="sign-in-button" class="btn btn-info" ng-click="loginctrl.doLogin();" ng-disabled="loginctrl.loader">
+					<i class="fa fa-user-circle"></i> Sign in with Google
+			</button><br/><br/>
+			<span ng-if="loginctrl.loader"><i class="fa fa-spinner fa-pulse"></i> Checking login...</span>
+    </div>
+</section>
+	
 </div> <!-- /container -->
