--- a/projects/myBlog/template/Blog-dets/css/style.css
+++ b/projects/myBlog/template/Blog-dets/css/style.css
@@ -19,3 +19,8 @@ textarea{
     text-align: center;
     border-right: 1px solid darksalmon;
 }
+
+.deleteCmt{
+    font-size: 20px;
+    cursor: pointer;
+}
