--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,10 @@ body {
 	font-size:20px;
 }
 
+.languagesUsed .label{
+	margin-right:10px;
+}
+
 @media (max-width: 500px) {
 	.navbar-brand {
 		width:80%;
