icon style changed

--- a/css/style.css
+++ b/css/style.css
@@ -132,13 +132,15 @@ body {
 }
 
 .project .icon{
-	position:absolute;
-	top:0px;
-	right:0px;
-	padding:10px;
-	background:#22A39F;
-	color:#fff;
-	z-index:2;
+	position: absolute;
+    top: 0px;
+    right: 0px;
+    padding: 10px;
+    background: turquoise;
+    color: #000;
+    z-index: 2;
+    text-align: center;
+    font-size: 14px;
 }
 
 
