--- a/views/projects.html
+++ b/views/projects.html
@@ -10,7 +10,7 @@
 	<div class="col-md-6 col-xs-12 col-lg-6 flip-container" ng-repeat="projs in PrjCtrl.projectsDets" ng-show="!PrjCtrl.loader">
 		<div class="project f1_container">
 			<span class="icon" title="Click me for more Info.">
-				<span class="glyphicon glyphicon-info-sign"></span>
+				<span class="glyphicon glyphicon-info-sign"><br/>info</span>
 			</span>
 			<a class="f1_card" ng-href="{{projs.project_link}}" target="_blank">
 				<div class="front face">
